intelij-plugin/src/main/gen/tech/pantheon/yanginator/plugin/parser/YangParser.java
/*
 *
 *   Copyright (c) 2021-2026 PANTHEON.tech, s.r.o. All rights reserved.
 *
 *   This program and the accompanying materials are made available under the
 *   terms of the Eclipse Public License v1.0 which accompanies this distribution,
 *   and is available at http://www.eclipse.org/legal/epl-v10.html
 *
 */

// This is a generated file. Not intended for manual editing.
package tech.pantheon.yanginator.plugin.parser;

import com.intellij.lang.ASTNode;
import com.intellij.lang.LightPsiParser;
import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.PsiParser;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.TokenSet;

import static com.intellij.lang.parser.GeneratedParserUtilBase.TRUE_CONDITION;
import static com.intellij.lang.parser.GeneratedParserUtilBase._COLLAPSE_;
import static com.intellij.lang.parser.GeneratedParserUtilBase._NONE_;
import static com.intellij.lang.parser.GeneratedParserUtilBase._NOT_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.adapt_builder_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.consumeToken;
import static com.intellij.lang.parser.GeneratedParserUtilBase.consumeTokens;
import static com.intellij.lang.parser.GeneratedParserUtilBase.create_token_set_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.current_position_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.empty_element_parsed_guard_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.enter_section_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.eof;
import static com.intellij.lang.parser.GeneratedParserUtilBase.exit_section_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.nextTokenIs;
import static com.intellij.lang.parser.GeneratedParserUtilBase.parseTokens;
import static com.intellij.lang.parser.GeneratedParserUtilBase.recursion_guard_;
import static com.intellij.lang.parser.GeneratedParserUtilBase.report_error_;
import static tech.pantheon.yanginator.plugin.external.ExternalRules.anyOrder;
import static tech.pantheon.yanginator.plugin.external.ExternalRules.blockComment;
import static tech.pantheon.yanginator.plugin.external.ExternalRules.dummyElement;
import static tech.pantheon.yanginator.plugin.external.ExternalRules.fileReference;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ABSOLUTE_PATH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ABSOLUTE_SCHEMA_NODEID;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ABSOLUTE_URI;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ACTION_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ACTION_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ADD_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ADD_KEYWORD_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ALPHA;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ALPHANUMERICAL_ALPHA_FIRST;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ALPHANUMERICAL_DIGIT_FIRST;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AMPERSAND;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AND_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ANYDATA_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ANYDATA_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ANYXML_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ANYXML_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_APOSTROPHE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ARGUMENT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ARGUMENT_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ASTERISK;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AT_SIGN;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AUGMENT_ARG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AUGMENT_ARG_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AUGMENT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AUGMENT_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_AUTHORITY;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BACKSLASH_QUOTE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BACK_SLASH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BASE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BASE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BELONGS_TO_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BELONGS_TO_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BINARY_SPECIFICATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BITS_SPECIFICATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BIT_IS_SET_FUNCTION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BIT_IS_SET_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BIT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BIT_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BLOCK_COMMENT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BLOCK_COMMENT_BODY;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BLOCK_COMMENT_END;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BLOCK_COMMENT_START;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_BODY_STMTS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CARRIAGE_RETURN;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CASE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CASE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CHARS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CHOICE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CHOICE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CIRCUMFLEX_ACCENT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CLOSED_BRACKET;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_COLON;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_COMMA;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_COMMENT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONFIG_ARG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONFIG_ARG_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONFIG_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONFIG_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONTACT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONTACT_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONTAINER_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CONTAINER_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CRLF;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CURRENT_FUNCTION_INVOCATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_CURRENT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DASH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DATA_DEF_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DATE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DATE_ARG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DATE_ARG_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DECIMAL_64_SPECIFICATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DECIMAL_VALUE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEC_OCTET;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEFAULT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEFAULT_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DELETE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DELETE_KEYWORD_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEPRECATED_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEREF_FUNCTION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEREF_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DERIVED_FROM_FUNCTION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DERIVED_FROM_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DERIVED_FROM_OR_SELF_FUNCTION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DERIVED_FROM_OR_SELF_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DESCENDANT_PATH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DESCENDANT_SCHEMA_NODEID;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DESCRIPTION_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DESCRIPTION_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATE_ADD_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATE_DELETE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATE_NOT_SUPPORTED_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATE_REPLACE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATION_ARG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATION_ARG_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATION_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATION_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DEVIATION_STMT_BODY_ARGS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DIGIT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DIGITS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOLLAR_SIGN;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOUBLE_BACKSLASH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOUBLE_COLON;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOUBLE_DOT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOUBLE_FORWARD_SLASH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOUBLE_QUOTE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DOUBLE_QUOTED_VCHAR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_DQUOTE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_EIGHT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ENUM_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ENUM_SPECIFICATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ENUM_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ENUM_VALUE_FUNCTION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ENUM_VALUE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_EQUALS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ERROR_APP_TAG_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ERROR_APP_TAG_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ERROR_MESSAGE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ERROR_MESSAGE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_ESCAPES;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_EXCLAMATION_MARK;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_EXTENSION_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_EXTENSION_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FALSE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FEATURE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FEATURE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FILE_REFERENCE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FIVE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FORWARD_SLASH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FOUR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FRACTIONS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FRACTION_DIGITS_ARG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FRACTION_DIGITS_ARG_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FRACTION_DIGITS_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FRACTION_DIGITS_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FRAGMENT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_ARGS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_END;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_IDENTITY;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_NODE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_NODE_IDENTITY;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_NODE_STRING;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_START;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_STRING;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_BODY_STRING_STRING;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_INVOCATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_FUNCTION_NAME;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_GEN_DELIMS;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_GRAVE_ACCENT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_GREATER_THAN_SIGN;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_GROUPING_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_GROUPING_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_HASH;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_HEXDIG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_HIER_PART;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_HOST;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_HTAB;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_H_16;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTIFIER;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTIFIER_ARG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTIFIER_ARG_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTIFIER_REF;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTIFIER_REF_ARG;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTIFIER_REF_ARG_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTITYREF_SPECIFICATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTITY_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IDENTITY_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IF_FEATURE_EXPR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IF_FEATURE_EXPR_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IF_FEATURE_FACTOR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IF_FEATURE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IF_FEATURE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IF_FEATURE_TERM;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IMPORT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IMPORT_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INCLUDE_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INCLUDE_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INDENTABLE_QUOTED_STRING;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INDENTABLE_STRING;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INPUT_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INPUT_STMT;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INSTANCE_IDENTIFIER;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INSTANCE_IDENTIFIER_SPECIFICATION;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INTEGER_VALUE;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INTEGER_VALUE_STR;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_INVERT_MATCH_KEYWORD;
import static tech.pantheon.yanginator.plugin.psi.YangTypes.YANG_IPV4;
